fix(field): overlap with label and field content

--- a/src/components/elements/field/Field.styl
+++ b/src/components/elements/field/Field.styl
@@ -34,7 +34,6 @@ $resetInput {
       @extend $resetInput;
       display: block;
       flex: auto;
-      width: 100%;
       height: 26px;
       font-weight: bold;
 
